INTYGFV-16409: Remove unused fields in TestabilityCertificateService.